--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   qr_flutter: ^4.0.0
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.10
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
